# Senior-IS-Swarm-Cognition

./: .gitignore  README.md  pyproject.toml
Cycle1_Unicellular/: agents.py  apps.py  models.py  pyproject.toml  test.ipynb
