[project]
name = "cycle1-unicellular"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mesa[rec]>=3.3.0",
    "seaborn>=0.13.2",
    "solara>=1.51.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
